--- a/how-to.html
+++ b/how-to.html
@@ -87,7 +87,7 @@
                         <p>The following is the process/steps for potentially obtaining membership and a unit in AHC Ltd:   </p>
                         <ul>
                             <li>Attend a free Information Night with AHCLtd at the office / meeting hall     located at 8427 - 184 Street NW, Edmonton on the first Tuesday of the month     at 7:00PM (keep the receipt for proof of attendance); or</li>
-                            <li>Attend a <a href="http://www.nacha.ca"> Northern Alberta Co-operative Housing Association</a> (NACHA)     Information Session - it costs $20 as of 2019. Visit the <a href="https://nacha.ca/information-sessions/"> NACHA Information     Sessions page</a> to obtain dates and times for the next Information Session)     (Please keep the proof of attendance).</li>
+                            <li>Attend a <a href="http://www.nacha.ca" target="_blank"> Northern Alberta Co-operative Housing Association</a> (NACHA)     Information Session - it costs $20 as of 2019. Visit the <a href="https://nacha.ca/information-sessions/"  target="_blank"> NACHA Information     Sessions page</a> to obtain dates and times for the next Information Session)     (Please keep the proof of attendance).</li>
                             <li>Download the following <strong> Application Form</strong> which, includes a Monthly Budget     Document (link to downloadable form – get from SB). </li>
                             <li>We will require a <strong>$20 (MONEY ORDER or CHEQUE only) fee</strong> from each     applicant for membership (combined to a $40 maximum) to do a credit     check prior to an interview.</li>
                             <li>
