--- a/how-to.html
+++ b/how-to.html
@@ -220,6 +220,13 @@
                 Thank you for considering membership with us. Wishing you all
                 the best and success in your journey.
               </p>
+
+              <p>
+                Please apply according to this process even if no units are
+                <a href="#">available</a> and if any units are available you
+                will be added to the waiting list if your application is
+                accepted.
+              </p>
             </div>
             <!--/.inside_amenties_cont-->
             <!--how-to-content-->
