--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
               <p>
                 There are no vacancies (units available) at this time. However,
                 we are accepting applications so please apply to be on the
-                waiting list as per the process under “How to Apply” (Israel
-                make a hyperlink to the How to Apply page). If your application
-                is accepted, you will be added to the waiting list.
+                waiting list as per the process under “<a href="how-to.html"
+                  >How to Apply</a
+                >”. If your application is accepted, you will be added to the
+                waiting list.
               </p>
             </div>
             <!--/.text_inside_box-->
