--- a/amenities.html
+++ b/amenities.html
@@ -65,7 +65,7 @@
     <!-- main nav start -->
     <nav class="navbar navbar-expand-md custom_cls">
       <div class="container">
-        <a href="#" class="navbar-brand"><img src="img/logo.png" alt=""/></a>
+        <a href="#" class="navbar-brand"><img src="img/logo.png" alt="" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -112,9 +112,16 @@
             <div class="inside_amenties_cont">
               <p>
                 AHC Ltd consists of five buildings, plus an unoccupied office /
-                meeting hall. We are located approximately a 20-minute walk from
+                meeting hall. We are
                 <a
                   href="https://www.google.com/maps/place/Aldergrove+Housing+Co-operative+Ltd/@53.5177021,-113.6406095,15z/data=!4m5!3m4!1s0x0:0xb42e052c29e8de8!8m2!3d53.5177021!4d-113.6406095"
+                  target="_blank"
+                >
+                  located</a
+                >
+                approximately a 20-minute walk from
+                <a
+                  href="https://www.google.com/maps/place/West+Edmonton+Mall/@53.5225151,-113.6263793,17z/data=!3m1!4b1!4m5!3m4!1s0x53a020573a8614db:0x8546a29e09b26fcb!8m2!3d53.5225151!4d-113.6241906"
                   target="_blank"
                 >
                   West Edmonton Mall</a
