--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- main nav start -->
     <nav class="navbar navbar-expand-md custom_cls">
       <div class="container">
-        <a href="#" class="navbar-brand"><img src="img/logo.png" alt=""/></a>
+        <a href="#" class="navbar-brand"><img src="img/logo.png" alt="" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -114,7 +114,7 @@
             <div class="text_inside_box">
               <h3>about</h3>
               <p>
-                Aldergrove Housing Co-operative Ltd (AHC) was completed for
+                Aldergrove Housing Co-operative Ltd (AHC Ltd) was completed for
                 occupancy in 1982. We are a member owned; non-profit housing
                 project, governed by a democratically elected board. Aldergrove
                 Housing Co-operative Ltd. consists of 34 units, ranging in size
