--- a/amenities.html
+++ b/amenities.html
@@ -146,7 +146,7 @@
                 </li>
                 <li>
                   ALL units have newer high efficiency natural gas forced air
-                  furnaces
+                  furnaces.
                 </li>
               </ul>
             </div>
