--- a/participation.html
+++ b/participation.html
@@ -65,7 +65,7 @@
     <!-- main nav start -->
     <nav class="navbar navbar-expand-md custom_cls">
       <div class="container">
-        <a href="#" class="navbar-brand"><img src="img/logo.png" alt=""/></a>
+        <a href="#" class="navbar-brand"><img src="img/logo.png" alt="" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -143,14 +143,14 @@
                 >
               </p>
               <p>
-                Co-operatives operate under 7 guiding principles Getting our
-                Co-op Principles Right which can be found
+                Co-operatives operate under seven guiding principles
+                <i>"Getting our Co-op Principles Right"</i> which can be found
                 <a
                   href="Getting-our-co-op-principles-right-article.pdf"
                   target="_blank"
                 >
-                  here.
-                </a>
+                  here </a
+                >.
               </p>
             </div>
             <!--/.inside_amenties_cont-->
