--- a/how-to.html
+++ b/how-to.html
@@ -65,7 +65,7 @@
     <!-- main nav start -->
     <nav class="navbar navbar-expand-md custom_cls">
       <div class="container">
-        <a href="#" class="navbar-brand"><img src="img/logo.png" alt=""/></a>
+        <a href="#" class="navbar-brand"><img src="img/logo.png" alt="" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -116,7 +116,7 @@
               </p>
               <ul>
                 <li>
-                  Attend a free Information Night with AHCLtd at the office /
+                  Attend a free Information Night with AHC Ltd at the office /
                   meeting hall located at 8427 - 184 Street NW, Edmonton on the
                   first Tuesday of the month at 7:00PM (keep the receipt for
                   proof of attendance); or
@@ -144,10 +144,9 @@
                       href="ConsentApplicationForm_18Jan2020.pdf"
                       target="_blank"
                     >
-                      Application Form
-                    </a>
-                  </strong>
-                  which, includes a Monthly Budget Document.
+                      Application Form.
+                    </a></strong
+                  >
                 </li>
                 <li>
                   We will require a
@@ -156,9 +155,9 @@
                   do a credit check prior to an interview.
                 </li>
                 <li>
-                  Send completed Application Form / Monthly Budget Document by
-                  mail to the following address, or you can also drop off it
-                  through mail slot in door, at the same address:
+                  Send completed Application Form by mail to the following
+                  address, or you can also drop it off through the mail slot in
+                  the door, at the same address:
                   <address class="ml-4 pl-4">
                     Aldergrove Housing Co-operative Ltd<br />
                     8427 - 184 St NW
