--- a/how-to.html
+++ b/how-to.html
@@ -222,9 +222,9 @@
 
               <p>
                 Please apply according to this process even if no units are
-                <a href="#">available</a> and if any units are available you
-                will be added to the waiting list if your application is
-                accepted.
+                <a href="index.html">available</a> and if any units are
+                available you will be added to the waiting list if your
+                application is accepted.
               </p>
             </div>
             <!--/.inside_amenties_cont-->
