--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
               >
                 <input type="text" placeholder="Name" />
                 <input type="email" placeholder="Email" name="" />
-                <input type="email" placeholder="Confirm Email" name="" />
+                <!-- <input type="email" placeholder="Confirm Email" name="" /> -->
                 <textarea rows="5" placeholder="Enquiry"></textarea>
+                <div data-netlify-recaptcha="true"></div>
                 <button type="submit">send</button>
               </form>
             </div>
